welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:65: error: Int does not take parameters
			if (x+diag+1 !=  getMondeLargeur()() ) {
                                                          ^